--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 			"database"
 		],
 		"psr-4": {
-			"App\\": "app/"
+			"App\\": "app/",
+			"Models\\": "app/models"
 		}
 	},
 	"autoload-dev": {
