--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"laravelcollective/html": "5.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
@@ -16,8 +17,7 @@
 			"database"
 		],
 		"psr-4": {
-			"App\\": "app/",
-			"Models\\": "app/models"
+			"App\\": "app/"
 		}
 	},
 	"autoload-dev": {
