--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,10 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*",
+		"laravel/framework": "5.0.35",
 		"laravelcollective/html": "5.*",
-		"barryvdh/laravel-ide-helper": "^2.2"
+		"barryvdh/laravel-ide-helper": "^2.2",
+		"barryvdh/laravel-dompdf": "^0.5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
