--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"laravelcollective/html": "5.*",
-		"barryvdh/laravel-ide-helper": "^2.2"
+		"barryvdh/laravel-ide-helper": "^2.2",
+		"doctrine/dbal": "~2.3"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
