--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
 		"phpspec/phpspec": "~2.1"
+		//"ircmaxell/password-compat": ">=1.0.*"
 	},
 	"autoload": {
 		"classmap": [
