--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,16 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.1.0",
+		"laravel/framework": "5.2.0",
 		"laravelcollective/html": "5.*",
 		"barryvdh/laravel-ide-helper": "^2.2",
 		"doctrine/dbal": "~2.3"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1"
-		//"ircmaxell/password-compat": ">=1.0.*"
+		"phpspec/phpspec": "~2.1",
+		"symfony/dom-crawler": "~3.0",
+		"symfony/css-selector": "~3.0"
 	},
 	"autoload": {
 		"classmap": [
