--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.2.0",
 		"laravelcollective/html": "5.*",
 		"barryvdh/laravel-ide-helper": "^2.2",
-		"doctrine/dbal": "~2.3"
+		"doctrine/dbal": "~2.3",
+		"laravel/cashier": "~6.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
@@ -44,6 +45,9 @@
 		]
 	},
 	"config": {
-		"preferred-install": "dist"
+		"preferred-install": "dist",
+		"platform": {
+			"php": "5.6.28"
+		}
 	}
 }
