--- a/.env_orig
+++ b/.env_orig
@@ -9,3 +9,5 @@ DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
+STRIPE_SECRET=sk_test_eXEERFJAqzLJprhgaFvPjHpj
+STRIPE_KEY=pk_test_mGHz2VWILqcxwcFfkrfCTtE7
