--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
 		"laravelcollective/html": "5.*",
 		"barryvdh/laravel-ide-helper": "^2.2",
 		"doctrine/dbal": "~2.3",
-		"laravel/cashier": "~6.0"
+		"laravel/cashier": "~6.0",
+		"barryvdh/laravel-dompdf": "0.6.1"
+
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
