--- a/.env_local
+++ b/.env_local
@@ -10,3 +10,4 @@ DB_PASSWORD=mine
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 STRIPE_SECRET=sk_test_eXEERFJAqzLJprhgaFvPjHpj
+STRIPE_KEY=pk_test_mGHz2VWILqcxwcFfkrfCTtE7
