time to give up, this works at home

--- a/.env_local
+++ b/.env_local
@@ -11,3 +11,5 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 STRIPE_SECRET=sk_test_eXEERFJAqzLJprhgaFvPjHpj
 STRIPE_KEY=pk_test_mGHz2VWILqcxwcFfkrfCTtE7
+
+BASE_DATE=1970BASE_DATE=1970
