one change .env_local

--- a/.env_local
+++ b/.env_local
@@ -12,4 +12,4 @@ SESSION_DRIVER=file
 STRIPE_SECRET=sk_test_eXEERFJAqzLJprhgaFvPjHpj
 STRIPE_KEY=pk_test_mGHz2VWILqcxwcFfkrfCTtE7
 
-BASE_DATE=1970BASE_DATE=1970
+BASE_DATE=1970
