--- a/public/.htaccess
+++ b/public/.htaccess
@@ -13,3 +13,9 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+# php -- BEGIN cPanel-generated handler, do not edit
+# Set the "ea-php56" package as the default "PHP" programming language.
+<IfModule mime_module>
+  AddType application/x-httpd-ea-php56 .php .php5 .phtml
+</IfModule>
+# php -- END cPanel-generated handler, do not edit
