--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"barryvdh/laravel-ide-helper": "^2.2",
 		"doctrine/dbal": "~2.3",
 		"laravel/cashier": "~6.0",
-		"barryvdh/laravel-dompdf": "0.6.1"
+		"barryvdh/laravel-dompdf": "0.6.1",
+		"maatwebsite/excel": "~2.1.0"
 
 	},
 	"require-dev": {
