--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,8 @@
+#RewriteCond %{HTTPS} off #commented out for local use
+# First rewrite to HTTPS:
+# Don't put www. here. If it is already there it will be included, if not
+# the subsequent rule will catch it.
+#RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301] #commented out for local use
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews
