htaccess for https redirect to gitignore

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,11 @@
 # Don't put www. here. If it is already there it will be included, if not
 # the subsequent rule will catch it.
 #RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301] #commented out for local use
+#this below works********
+#RewriteEngine On
+#RewriteCond %{SERVER_PORT} 80
+#RewriteRule ^(.*)$ https://www.yourdomain.com/$1 [R,L]
+#*******but is commented out here
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews
